--- a/map-data/planet_-71.81_42.27_0e6d11b0-svg-wireframe/README.html
+++ b/map-data/planet_-71.81_42.27_0e6d11b0-svg-wireframe/README.html
@@ -1,44 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">  <title>README</title>
-</head>
-<body>
-  <pre>
-Map data (c) OpenStreetMap contributors, <a href="https://www.openstreetmap.org">https://www.openstreetmap.org</a>
-Extracts created by BBBike, <a href="https://extract.bbbike.org">https://extract.bbbike.org</a>
-Maperitive by <a href="http://maperitive.net/">http://maperitive.net/</a>
-
-Please read the OSM wiki how to use SVG
-
-  <a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">https://en.wikipedia.org/wiki/Scalable_Vector_Graphics</a>
-  <a href="https://wiki.openstreetmap.org/wiki/SVG">https://wiki.openstreetmap.org/wiki/SVG</a>
-
-
-This SVG map was created on: Sun 15 Dec 21:45:20 UTC 2024
-Maperitive map style: wireframe
-GPS rectangle coordinates (lng,lat): -71.816,42.27 x -71.798,42.278
-Script URL: <a href="https://extract.bbbike.org/?sw_lng=-71.816&amp;sw_lat=42.27&amp;ne_lng=-71.798&amp;ne_lat=42.278&amp;format=svg-wireframe.zip&amp;coords=-71.81%2C42.27%7C-71.803%2C42.27%7C-71.798%2C42.27%7C-71.798%2C42.274%7C-71.799%2C42.278%7C-71.808%2C42.278%7C-71.816%2C42.27&amp;city=WPI&amp;lang=en">https://extract.bbbike.org/?sw_lng=-71.816&amp;sw_lat=42.27&amp;ne_lng=-71.798&amp;ne_lat=42.278&amp;format=svg-wireframe.zip&amp;coords=-71.81%2C42.27%7C-71.803%2C42.27%7C-71.798%2C42.27%7C-71.798%2C42.274%7C-71.799%2C42.278%7C-71.808%2C42.278%7C-71.816%2C42.27&amp;city=WPI&amp;lang=en</a>
-Name of area: WPI
-
-
-We appreciate any feedback, suggestions and a donation!
-You can support us via PayPal or bank wire transfer.
-
-  <a href="https://extract.bbbike.org/community.html">https://extract.bbbike.org/community.html</a>
-
-You can donate any free amount you want. We are happy for every donation,
-for 5, 10, 20, or 50 Euro. Whatever you think the service is worth for you,
-or you can afford. We need to raise 20 Euro (25 USD) by the end of the day or
-600 Euro (700 USD) per month to cover the server costs.
-Your donation helps to pay for hosting the service. Many thanks!
-
-thanks, Wolfram Schneider
-
---
-BBBike professional plans: <a href="https://extract.bbbike.org/support.html">https://extract.bbbike.org/support.html</a>
-Planet.osm extracts: <a href="https://extract.bbbike.org">https://extract.bbbike.org</a>
-BBBike Map Compare: <a href="https://mc.bbbike.org">https://mc.bbbike.org</a>
-</pre>
-</body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:c1f67945e267fc778324b0d721c1dbf3409497090ec394862ae24b4f059c174a
+size 2379
